kustomize/blue-green/base/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: kubeinfo-bg
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: kubeinfo
  template:
    metadata:
      labels:
        app: kubeinfo
    spec:
      containers:
      - name: kubeinfo-container
        image: ghcr.io/heymikeey/kube-info/kube-info:v2.0.0
        ports:
          - containerPort: 5000
  strategy:
    blueGreen:
      activeService: kubeinfo-bg
      previewService: kubeinfo-bg-preview
      autoPromotionEnabled: false
