kustomize/blue-green/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubeinfo-bg
spec:
  selector:
    app: kubeinfo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: kubeinfo-bg-preview
spec:
  selector:
    app: kubeinfo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
